--- a/FormationOO/FormationOO/FormationOO.csproj
+++ b/FormationOO/FormationOO/FormationOO.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>FormationOO.ProgramGeometry</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,11 +46,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs" />
+    <Compile Include="Book.cs" />
+    <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="ProgramGeometry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Bank.cd" />
+    <None Include="Geometry.cd" />
+    <None Include="Media.cd" />
+    <None Include="OO.docx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
