--- a/FormationOO/FormationOO/FormationOO.csproj
+++ b/FormationOO/FormationOO/FormationOO.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>FormationOO.ProgramGeometry</StartupObject>
+    <StartupObject>FormationOO.ProgramBank</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -51,6 +51,7 @@
     <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ProgramBank.cs" />
+    <Compile Include="ProgramMedia.cs" />
     <Compile Include="ProgramGeometry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rectangle.cs" />
