--- a/FormationOO/FormationOO/FormationOO.csproj
+++ b/FormationOO/FormationOO/FormationOO.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account.cs" />
+    <Compile Include="Author.cs" />
     <Compile Include="Book.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
@@ -54,7 +55,9 @@
     <Compile Include="ProgramMedia.cs" />
     <Compile Include="ProgramGeometry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Publisher.cs" />
     <Compile Include="Rectangle.cs" />
+    <Compile Include="Transaction.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
