--- a/FormationOO/FormationOO/FormationOO.csproj
+++ b/FormationOO/FormationOO/FormationOO.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Publisher.cs" />
     <Compile Include="Rectangle.cs" />
+    <Compile Include="Square.cs" />
     <Compile Include="Transaction.cs" />
   </ItemGroup>
   <ItemGroup>
