--- a/FormationOO/FormationOO/FormationOO.csproj
+++ b/FormationOO/FormationOO/FormationOO.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>FormationOO.ProgramMedia</StartupObject>
+    <StartupObject>FormationOO.ProgramGeometry</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -50,6 +50,7 @@
     <Compile Include="Author.cs" />
     <Compile Include="Book.cs" />
     <Compile Include="Cd.cs" />
+    <Compile Include="Losange.cs" />
     <Compile Include="Media.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="ProgramGeometry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Publisher.cs" />
+    <Compile Include="Quadrilatere.cs" />
     <Compile Include="Rectangle.cs" />
     <Compile Include="Square.cs" />
     <Compile Include="Transaction.cs" />
