--- a/FormationOO/FormationOO/FormationOO.csproj
+++ b/FormationOO/FormationOO/FormationOO.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Rectangle.cs" />
     <Compile Include="Square.cs" />
     <Compile Include="Transaction.cs" />
+    <Compile Include="TriangleRectangle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
