--- a/FormationOO/FormationOO/FormationOO.csproj
+++ b/FormationOO/FormationOO/FormationOO.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>FormationOO.ProgramBank</StartupObject>
+    <StartupObject>FormationOO.Drivers.ProgramVideoGame</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -52,6 +52,11 @@
     <Compile Include="Book.cs" />
     <Compile Include="Cart.cs" />
     <Compile Include="Cd.cs" />
+    <Compile Include="Drivers\IDriver.cs" />
+    <Compile Include="Drivers\IntelDriver.cs" />
+    <Compile Include="Drivers\NVidiaDriver.cs" />
+    <Compile Include="Drivers\ProgramVideoGame.cs" />
+    <Compile Include="Drivers\VideoGame.cs" />
     <Compile Include="DSP.cs" />
     <Compile Include="IMedia.cs" />
     <Compile Include="Losange.cs" />
