--- a/FormationOO/FormationOO/FormationOO.csproj
+++ b/FormationOO/FormationOO/FormationOO.csproj
@@ -60,8 +60,10 @@
     <Compile Include="Drivers\VideoGame.cs" />
     <Compile Include="DSP\DSP.cs" />
     <Compile Include="IMedia.cs" />
+    <Compile Include="IMediaRepository.cs" />
     <Compile Include="Losange.cs" />
     <Compile Include="Media.cs" />
+    <Compile Include="MediaService.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ProgramBank.cs" />
@@ -71,6 +73,7 @@
     <Compile Include="Publisher.cs" />
     <Compile Include="Quadrilatere.cs" />
     <Compile Include="Rectangle.cs" />
+    <Compile Include="Singleton.cs" />
     <Compile Include="Square.cs" />
     <Compile Include="Transaction.cs" />
     <Compile Include="TriangleRectangle.cs" />
